remove redundant file